// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <SearchBox
    autoFocus={true}
    onChange={[MockFunction]}
    onKeyDown={[MockFunction]}
    placeholder="hotspots.form.select_user"
  />
</Fragment>
`;

exports[`should render correctly: loading 1`] = `
<Fragment>
  <SearchBox
    autoFocus={true}
    onChange={[MockFunction]}
    onKeyDown={[MockFunction]}
    placeholder="hotspots.form.select_user"
  />
  <DeferredSpinner
    timeout={100}
  />
</Fragment>
`;

exports[`should render correctly: open 1`] = `
<Fragment>
  <SearchBox
    autoFocus={true}
    onChange={[MockFunction]}
    onKeyDown={[MockFunction]}
    placeholder="hotspots.form.select_user"
  />
  <div
    className="position-relative"
  >
    <DropdownOverlay
      className="abs-width-400"
      noPadding={true}
      placement="bottom-left"
    >
      <div
        className="padded"
      >
        no_results
      </div>
    </DropdownOverlay>
  </div>
</Fragment>
`;

exports[`should render correctly: open with results 1`] = `
<Fragment>
  <SearchBox
    autoFocus={true}
    onChange={[MockFunction]}
    onKeyDown={[MockFunction]}
    placeholder="hotspots.form.select_user"
  />
  <div
    className="position-relative"
  >
    <DropdownOverlay
      className="abs-width-400"
      noPadding={true}
      placement="bottom-left"
    >
      <ul
        className="hotspot-assignee-search-results"
      >
        <li
          className="padded"
          key="john.doe"
          onClick={[Function]}
        >
          <Connect(Avatar)
            className="spacer-right"
            name="John Doe"
            size={16}
          />
          John Doe
        </li>
        <li
          className="padded active"
          key="highlighted"
          onClick={[Function]}
        >
          <Connect(Avatar)
            className="spacer-right"
            name="John Doe"
            size={16}
          />
          John Doe
        </li>
      </ul>
    </DropdownOverlay>
  </div>
</Fragment>
`;
